--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="style.css" rel="stylesheet">
 	<script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
 	<script src="bower_components/angular-route/angular-route.min.js" type="text/javascript"></script>
+	<script src="bower_components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
 	
 	<script src="scripts/app.js" type="text/javascript"></script>
 	<script src="scripts/controllers/HomeController.js" type="text/javascript"></script>
@@ -21,6 +22,8 @@
 			<span><a href="#/myEarnings">My Earnings</a></span>
 		</div>
 	</header>
-	<div ng-view></div>
+	<div class="view-wrapper">
+		<div ng-view class="view-container ng-enter"></div>
+	</div>
 </body>
 </html>
